...
                        android:text="@{viewModel.name}"
                        android:textColor="@color/colorPrimaryLight"
                        android:textSize="24sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:id="@+id/linear1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:orientation="horizontal">
...
                        android:textColor="@color/colorGray"
                        android:text="SERVICES"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/serviceRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:scrollbarThumbVertical="@null"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
...
